# smartcatcher

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README1.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  project_tree.txt  pyproject.toml
.github/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh
backend/alembic/: 001_initial_migration.py  env.py  script.py.mako.txt
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  celery_client.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  products.py  subscriptions.py  users.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/models/: __init__.py  notification.py  product.py  subscription.py  user.py
backend/app/schemas/: __init__.py  auth.py  product.py  subscription.py  user.py
backend/app/scrapers/: __init__.py  base.py  demo.py  ebay.py  etsy.py  webscraper_io.py
backend/app/services/: __init__.py  auth.py  notification.py  product.py  subscription.py  user.py
bot/: Dockerfile  __init__.py  main.py  requirements.txt
bot/handlers/: __init__.py  notifications.py  start.py  subscription.py
bot/middlewares/: __init__.py  auth.py
bot/utils/: __init__.py  api_client.py
demo-server/: Dockerfile  __init__.py  main.py  requirements.txt
demo-server/templates/: product.html
examples/: fitness_band.html  sample_product_page.html  smartwatch_v1.html  wireless_headphones.html
tests/: Dockerfile  __init__.py  conftest.py  test_auth.py  test_products.py  test_scrapers.py  test_scrapers_ext.py  test_security.py  test_services.py  test_subscriptions.py
tests/integration/: __init__.py  test_api.py  test_auth_flow.py  test_notification_system.py  test_product_management.py  test_subscription_workflow.py
worker/: Dockerfile  __init__.py  celery_app.py
worker/tasks/: __init__.py  notifications.py  scraper.py
